 Version 0.53
 ============

 Released on 
  
 New features and improvements:

   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).

 Bug fixes:

   - Remove underlines of detached page titles.

 Other changes:

   - myIWindow: remove all references to main window.
   - ofaApplication: implements new ofaIGetter interface.
   - ofaExtension: now passes the ofaIGetter (instead of the GApplication).
   - ofaFileDir: renamed as ofaPortfolioCollection (todo #1052).
   - ofa_hub_register_types(): new method.
   - ofaIExporter: new interface.
   - ofaIGetter: new interface.
   - ofaIThemeManager: new interface.
   - ofaMainWindow: implements new ofaIGetter and ofaIThemeManager interfaces.
   - ofaMainWindow: headers are moved back to ui/ (todo #937).
   - ofa_main_window_activate_theme(): removed method.
   - ofa_main_window_get_hub(): removed method.
   - ofa_nomodal_page_get_by_theme(): removed method.
   - ofa_nomodal_page_present_by_type(): new method.
   - ofaPage: implements new ofaIGetter interface.
   - ofa_page_get_main_window(): removed method.
   - ofa_page_get_hub(): removed method.
   - ofa_page_get_theme(): removed method.

-----------------------------------------------------------------------
 Version 0.52
 ============

 Released on 2016-03-26

 There is a triple review with this version:

   1/ first, the ofaPlugins class, which held both list of plugins as a
      static global variable, and the plugins management itself as a
      standard class, is splitted into ofaExtenderCollection and
      ofaExtenderModule classes.
      Though these classes are rather standard, they must be kept in the
      'ofa' namespace as they check for API extension which requires
      'ofa_xxx' named functions.

   2/ second, the need of an application-global object which would hold
      all non-gui relative data, is provided by the ofaHub object.