@@ -41,6 +41,7 @@
  Other changes:
 
    - myIWindow: remove all references to main window.
+   - myIWindow::get_key_prefix(): new method.
    - ofaApplication: implements new ofaIGetter interface.
    - ofaExtension: now passes the ofaIGetter (instead of the GApplication).
    - ofaFileDir: renamed as ofaPortfolioCollection (todo #1052).
